--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -5,13 +5,16 @@
   padding: 0px;
   box-sizing: border-box;
 }
+.for_mbl {
+  display: none;
+}
 .splide {
   padding-left: 0px !important;
   padding-right: 0px !important;
   padding-bottom: 0px !important;
 }
-.CategoryArea{
-margin-bottom: 6rem !important;
+.CategoryArea {
+  margin-bottom: 6rem !important;
 }
 .CategoryArea .splide {
   padding-left: 3rem !important;
@@ -20,11 +23,12 @@ margin-bottom: 6rem !important;
 .CategoryArea .splide .splide__arrow--prev {
   left: -1em;
 }
-.CategoryArea nav li{
-  cursor:pointer;
+.CategoryArea nav li {
+  cursor: pointer;
 }
-.CategoryArea.no_data .splide__arrow--next,.CategoryArea.no_data .splide__arrow--prev{
-visibility: hidden !important;
+.CategoryArea.no_data .splide__arrow--next,
+.CategoryArea.no_data .splide__arrow--prev {
+  visibility: hidden !important;
 }
 .CategoryArea .splide button {
   height: 46.00000000000017px;
@@ -93,8 +97,13 @@ main {
   background: url("../img/main_bg.png");
   background-size: cover;
 }
+main .main_content {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
 main .presentation {
-  width: 60%;
+  width: 800px;
 }
 main .presentation h1 {
   font-size: 55px;
@@ -432,7 +441,13 @@ footer .footer_grid h1 {
     text-align: center;
   }
   .grid_inner_area {
- display:block;
+    display: block;
+  }
+  .for_desktop {
+    display: none;
+  }
+  .for_mbl {
+    display: block;
   }
   .grid_inner_area .splider_wrapper {
     /* display: none; */
@@ -627,22 +642,22 @@ footer .footer_grid h1 {
     margin-left: auto;
     margin-right: auto;
   }
-.grid_inner_area .order_now{
-  background-position-x: -220px;
-}.grid_inner_area .no_order {
-   
-  background-position-x: -270px;
-}
-.grid_inner_area .order_now p{
-  width: 70%;
-}
-.header_wrapper .logo{
-position: static;
-transform: translateX(0px);
-}
-header{
-  justify-content: space-between;
-}
+  .grid_inner_area .order_now {
+    background-position-x: -220px;
+  }
+  .grid_inner_area .no_order {
+    background-position-x: -270px;
+  }
+  .grid_inner_area .order_now p {
+    width: 70%;
+  }
+  .header_wrapper .logo {
+    position: static;
+    transform: translateX(0px);
+  }
+  header {
+    justify-content: space-between;
+  }
 }
 
 @media screen and (max-width: 450px) {
